<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider"
    tools:context="com.example.android.bookinventory.EditorActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <!-- https://stackoverflow.com/questions/37349845/is-it-possible-to-put-a-constraintlayout-inside-a-scrollview/49853954#49853954-->

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_product_info"
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/card_view_supplier_info"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/main_content_margin">

                    <TextView
                        android:id="@+id/product_info"
                        style="@style/MyTextViewsSecondaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/widgets_margin"
                        android:text="@string/product_information_label"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                    <EditText
                        android:id="@+id/product_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/product_name_label"
                        android:paddingBottom="@dimen/widgets_margin"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/product_info" />


                    <EditText
                        android:id="@+id/product_price"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/product_price_label"
                        android:inputType="numberDecimal"
                        android:paddingBottom="@dimen/widgets_margin"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/product_name" />


                    <EditText
                        android:id="@+id/product_quantity"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/quantity_label"
                        android:inputType="number"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/product_price" />


                    <TextView
                        android:id="@+id/product_genre_label"
                        style="@style/MyTextViewsSecondaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/widgets_margin"
                        android:paddingEnd="@dimen/widgets_margin"
                        android:paddingRight="@dimen/widgets_margin"
                        android:text="@string/genre_label"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/product_quantity" />

                    <Spinner
                        android:id="@+id/product_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:paddingBottom="@dimen/widgets_margin"
                        android:spinnerMode="dropdown"
                        app:layout_constraintLeft_toRightOf="@id/product_genre_label"
                        app:layout_constraintTop_toBottomOf="@id/product_quantity" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_supplier_info"
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view_product_info">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/main_content_margin">

                    <TextView
                        android:id="@+id/supplier_info"
                        style="@style/MyTextViewsSecondaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/widgets_margin"
                        android:text="@string/supplier_information_label"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/product_supplier_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/supplier_name"
                        android:paddingBottom="@dimen/widgets_margin"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/supplier_info" />


                    <EditText
                        android:id="@+id/product_supplier_phone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:hint="@string/supplier_phone_number"
                        android:inputType="phone"
                        android:paddingBottom="@dimen/widgets_margin"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/product_supplier_name" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

</android.support.design.widget.CoordinatorLayout>