<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_content_margin">

    <android.support.constraint.Guideline
        android:id="@+id/vertical_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.8" />


    <TextView
        android:id="@+id/product_name"
        style="@style/MyTextViewsPrimaryText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/widgets_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/vertical_guideline"
        tools:text="Product Name" />

    <TextView
        android:id="@+id/product_price_label"
        style="@style/MyTextViewsSecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/widgets_margin"
        android:paddingRight="@dimen/widgets_margin"
        android:text="@string/product_price_label"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/product_price"
        app:layout_constraintTop_toBottomOf="@id/product_name"
        tools:text="@string/product_price_label" />

    <TextView
        android:id="@+id/product_price"
        style="@style/MyTextViewsPrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/widgets_margin"
        app:layout_constraintLeft_toRightOf="@id/product_price_label"
        app:layout_constraintTop_toBottomOf="@id/product_name"
        tools:text="$2.99" />

    <TextView
        android:id="@+id/product_quantity"
        style="@style/MyTextViewsPrimaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/widgets_margin"
        android:paddingRight="@dimen/widgets_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/product_price"
        tools:text="2" />

    <TextView
        android:id="@+id/product_quantity_label"
        style="@style/MyTextViewsSecondaryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_quantity_label_items_left"
        app:layout_constraintLeft_toRightOf="@id/product_quantity"
        app:layout_constraintTop_toTopOf="@id/product_quantity"
        tools:text="@string/product_quantity_label_items_left" />

    <Button
        android:id="@+id/sale_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:focusable="false"
        android:text="@string/sale_button"
        app:layout_constraintLeft_toRightOf="@id/vertical_guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</android.support.constraint.ConstraintLayout>