<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/divider"
    tools:context="com.example.android.bookinventory.DetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

     <!-- https://stackoverflow.com/questions/37349845/is-it-possible-to-put-a-constraintlayout-inside-a-scrollview/49853954#49853954-->

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_product_info"
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toTopOf="@id/card_view_supplier_info"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/main_content_margin">

                    <TextView
                        android:id="@+id/product_name_label"
                        style="@style/MyTextViewsSecondaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/widgets_margin"
                        android:text="@string/product_name_label"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/product_name"
                        style="@style/MyTextViewsPrimaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/widgets_margin"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/product_name_label"
                        tools:text="Product Name" />

                    <TextView
                        android:id="@+id/product_price_label"
                        style="@style/MyTextViewsSecondaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingRight="@dimen/widgets_margin"
                        android:paddingBottom="@dimen/widgets_margin"
                        android:text="@string/product_price_label"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/product_name" />

                    <TextView
                        android:id="@+id/product_price"
                        style="@style/MyTextViewsPrimaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/widgets_margin"
                        app:layout_constraintLeft_toRightOf="@id/product_price_label"
                        app:layout_constraintTop_toBottomOf="@id/product_name"
                        tools:text="$4.99" />

                    <TextView
                        android:id="@+id/product_quantity_label"
                        style="@style/MyTextViewsSecondaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/widgets_margin"
                        android:paddingRight="@dimen/widgets_margin"
                        android:paddingEnd="@dimen/widgets_margin"
                        android:text="@string/quantity_label"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toLeftOf="@id/minus_one_button"
                        app:layout_constraintTop_toBottomOf="@id/product_price_label" />

                    <Button
                        android:id="@+id/minus_one_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/minus_one_button_label"
                        android:paddingBottom="@dimen/widgets_margin"
                        app:layout_constraintLeft_toRightOf="@id/product_quantity_label"
                        app:layout_constraintRight_toLeftOf="@id/product_quantity"
                        app:layout_constraintTop_toBottomOf="@id/product_price_label" />

                    <TextView
                        android:id="@+id/product_quantity"
                        style="@style/MyTextViewsPrimaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="@dimen/widgets_margin"
                        app:layout_constraintLeft_toRightOf="@id/minus_one_button"
                        app:layout_constraintRight_toLeftOf="@id/add_one_button"
                        app:layout_constraintTop_toBottomOf="@id/product_price_label"
                        tools:text="3" />

                    <Button
                        android:id="@+id/add_one_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/widgets_margin"
                        android:text="@string/add_one_button_label"
                        app:layout_constraintLeft_toRightOf="@id/product_quantity"
                        app:layout_constraintTop_toBottomOf="@id/product_price" />

                    <TextView
                        android:id="@+id/product_genre_label"
                        style="@style/MyTextViewsSecondaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/widgets_margin"
                        android:paddingEnd="@dimen/widgets_margin"
                        android:paddingRight="@dimen/widgets_margin"
                        android:text="@string/genre_label"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/minus_one_button" />

                    <TextView
                        android:id="@+id/product_genre"
                        style="@style/MyTextViewsPrimaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/widgets_margin"
                        app:layout_constraintLeft_toRightOf="@id/product_genre_label"
                        app:layout_constraintTop_toBottomOf="@id/minus_one_button" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:id="@+id/card_view_supplier_info"
                style="@style/CardViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/card_view_product_info">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/main_content_margin">

                    <TextView
                        android:id="@+id/product_supplier_name_label"
                        style="@style/MyTextViewsSecondaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/widgets_margin"
                        android:text="@string/supplier_name"
                        app:layout_constraintLeft_toLeftOf="parent" />

                    <TextView
                        android:id="@+id/product_supplier_name"
                        style="@style/MyTextViewsPrimaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/widgets_margin"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/product_supplier_name_label"
                        tools:text="Product Supplier Name" />

                    <TextView
                        android:id="@+id/product_supplier_phone_label"
                        style="@style/MyTextViewsSecondaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/widgets_margin"
                        android:text="@string/supplier_phone_number"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/product_supplier_name" />

                    <TextView
                        android:id="@+id/product_supplier_phone"
                        style="@style/MyTextViewsPrimaryText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:paddingBottom="@dimen/widgets_margin"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/product_supplier_phone_label"
                        tools:text="Product Supplier Phone" />

                    <Button
                        android:id="@+id/call_supplier_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/call_supplier_button_label"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/product_supplier_phone" />

                </android.support.constraint.ConstraintLayout>

            </android.support.v7.widget.CardView>

        </android.support.constraint.ConstraintLayout>

    </ScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/outline_create_white_24" />

</android.support.design.widget.CoordinatorLayout>
